# credible-sdk

./: .gitignore  .gitmodules  .rustfmt-ignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  assertion-rework-master-plan.md  credible.toml  deny.toml  flake.nix  rust-toolchain.toml  rustc-ice-2025-07-29T14_33_05-54580.txt  rustc-ice-2025-07-31T05_41_39-11351.txt  rustfmt.toml
crates/account-proof-poc/: Cargo.toml
crates/account-proof-poc/src/: main.rs
crates/assertion-da/da-server/: Cargo.toml
crates/assertion-da/da-server/src/: config.rs  encode_args.rs  lib.rs  server.rs
crates/assertion-executor/: Cargo.toml  README.md
crates/assertion-executor/benches/: assertion_setup_perf.rs  assertion_store_read.rs  block_validation.rs  block_validation_fixture.rs  call-tracer-truncate.rs  call_tracer_recording.rs  executor_avg_block_perf.rs  executor_phase_perf.rs  executor_transaction_perf.rs  fork_db_bench.rs  identity_precompile.rs  sha256_precompile.rs  switch_fork.rs  validate_transaction.rs  worst-case-op.rs
crates/assertion-executor/interfaces/: ITriggerRecorder.sol  PhEvm.sol
crates/assertion-executor/src/: arena.rs  build_evm.rs  constants.rs  error.rs  lib.rs  metrics.rs  primitives.rs  test_utils.rs
crates/assertion-executor/src/db/: error.rs  fork_db.rs  mod.rs  multi_fork_db.rs  version_db.rs
crates/assertion-executor/src/evm/: build_evm.rs  linea.rs  macros.rs  mod.rs
crates/assertion-executor/src/executor/: config.rs  mod.rs  with_inspector.rs
crates/assertion-executor/src/inspectors/: mod.rs  phevm.rs  sol_primitives.rs  spec_recorder.rs  tracer.rs  trigger_recorder.rs
crates/assertion-executor/src/store/: assertion_contract_extractor.rs  assertion_store.rs  event_source.rs  indexer.rs  mod.rs
crates/assertion-executor/src/utils/: cast.rs  mod.rs  reorg_utils.rs
crates/assertion-executor/tests/: block_validation_fixture.rs  indexer_int_tests.rs
crates/assertion-executor/tests/common/: harness.rs  mod.rs  test_ctx.rs  tx_utils.rs
crates/assertion-replay/: Cargo.toml  README.md  build.rs  openapi.json
crates/assertion-replay/src/: config.rs  lib.rs  main.rs
crates/assertion-replay/src/integration_tests/: setup.rs  tests.rs
crates/assertion-replay/src/server/: mod.rs  state.rs
crates/assertion-replay/tests/: integration.rs
crates/assertion-replay/tests/common/: mod.rs  setup.rs
crates/assertion-verification/: Cargo.toml
crates/assertion-verification/src/: lib.rs
crates/benchmark-utils/: Cargo.toml
crates/benchmark-utils/src/: erc20.rs  lib.rs  perf.rs  uniswap_v3.rs
crates/da-client/: Cargo.toml
crates/eip-system-calls/: Cargo.toml
crates/eip-system-calls/src/: eip2935.rs  eip4788.rs  lib.rs
crates/int-test-utils/: Cargo.toml
crates/int-test-utils/src/: deploy_contracts.rs  deploy_da.rs  lib.rs  node_protocol_mock_server.rs
crates/mdbx/: Cargo.toml
crates/mdbx/src/: db.rs  lib.rs  migration.rs  reader.rs  tests.rs  writer.rs
crates/mdbx/src/common/: error.rs  mod.rs  tables.rs  types.rs
crates/pcl/core/: Cargo.toml
crates/pcl/core/src/: apply.rs  assertion_da.rs  assertion_submission.rs  auth.rs  config.rs  credible_config.rs  diff.rs  download.rs  error.rs  lib.rs  project.rs  verify.rs
crates/pcl/core/tests/: da_store_int_tests.rs
crates/pcl/phoundry/: Cargo.toml
crates/pcl/phoundry/src/: build.rs  build_and_flatten.rs  error.rs  phorge_test.rs
crates/revm-test/: Cargo.toml
crates/revm-test/src/: main.rs
crates/rpc-proxy/: Cargo.toml  HEURISTICS.md  PERFORMANCE_ANALYSIS.md  README.md  SIDECAR_API.md  build.rs
crates/rpc-proxy/benches/: cache_operations.rs  ecdsa_comparison.rs  hot_path.rs  profile_hot_path.rs
crates/rpc-proxy/examples/: sidecar_server.rs
crates/rpc-proxy/proto/: heuristics.proto
crates/rpc-proxy/src/: backpressure.rs  config.rs  error.rs  fast_reject.rs  fingerprint.rs  lib.rs  main.rs  sender_recovery.rs  server.rs
crates/rpc-proxy/src/sidecar/: grpc.rs  mod.rs  noop.rs
crates/rpc-proxy/tests/: integration.rs
crates/shadow-driver/: Cargo.toml
crates/shadow-driver/src/: cli.rs  lib.rs  listener.rs  main.rs  mdbx_store.rs  tx_env.rs
crates/sidecar/: Cargo.toml  README.md  build.rs  default_config.json
crates/sidecar/benches/: README.md  adopters.json  assertions.json  avg_block.rs  bench_utils.rs  deep_reorg.rs  event_sequencing_latency.rs  reorg.rs  reorg_per_tx.rs  transactions_results_add_transaction_result.rs  worst_case_compute.rs  worst_case_compute_with_observer.rs
crates/sidecar/src/: aeges.rs  config.rs  da_reachability.rs  db.rs  execution_ids.rs  graphql_event_source.rs  health.rs  indexer.rs  indexer_syncer.rs  integrated_state_worker.rs  json_rpc_db.rs  lib.rs  main.rs  metrics.rs  rpc.rs  state_worker.rs  state_worker_flush.rs  state_worker_host.rs  state_worker_thread.rs  sync_service.rs  syncer.rs  transaction_observer.rs  transactions_state.rs  tx_execution_id.rs
crates/sidecar/src/args/: clap_merge_poc.rs  cli.rs  config_rs_poc.rs  figment_clap_poc.rs  figment_poc.rs  file.rs  mod.rs
crates/sidecar/tests/: flush_protocol_integration.rs
crates/state-checker/: Cargo.toml
crates/state-checker/src/: cli.rs  json_rpc_client.rs  main.rs  state_root.rs
crates/state-store/: Cargo.toml
crates/state-store/src/: db.rs  lib.rs  reader.rs  redis_test_fixture.rs  tests.rs  writer.rs
crates/state-worker/: Cargo.toml  README.md
crates/state-worker/src/: cli.rs  config.rs  control.rs  coordination.rs  embedded.rs  error.rs  genesis.rs  geth_version.rs  host.rs  lib.rs  main.rs  metrics.rs  redis.rs  runtime.rs  service.rs  state.rs  system_calls.rs  worker.rs
crates/verifier/: Cargo.toml
crates/verifier-service/: Cargo.toml
crates/verifier-service/src/: lib.rs  main.rs  rpc.rs
crates/verifier/src/: lib.rs  main.rs  rpc.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: calls_fuzz.rs  load_external_slot_fuzz.rs  logs_fuzz.rs
scripts/geth_snapshop/: Cargo.toml
scripts/geth_snapshop/src/: main.rs
scripts/geth_snapshot/: Cargo.toml  README.md
scripts/geth_snapshot/src/: main.rs
(+415 files in other folders)
