[workspace]
members = [ "crates/assertion-da/da-client","crates/assertion-da/da-server", "crates/assertion-da/da-core"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"

[workspace.dependencies]
alloy = { version = "0.11.1", features = ["full", "node-bindings", "json-rpc", "rpc-client", "signer-local", "k256"] }
alloy-dyn-abi = {version = "0.8.15", features = ["std"] }
alloy-json-abi = "0.8.15"
rust-tracing = { git = "https://github.com/phylaxsystems/rust-tracing.git", tag = "0.1.3"}

anyhow = "1.0.86"
clap = {version = "4.5.11", features = ["derive", "env"]}
futures = "0.3.30"
reqwest = { version = "0.12.5", features = ["json"] }
serde = "1.0.204"
serde_json = "1.0.121"
tokio = { version = "1.39.2", features = ["full"] }
tokio-util = "0.7.15"
zerocopy = "0.7.35"
hyper = { version = "1.4.1", features = ["full"] }
util = "0.1.3"
http-body-util = "0.1.2"
simd-json = "0.13.10"
rand = "0.8.5"
hyper-util = "0.1.6"
bincode = "1.3.3"
tokio-stream = "0.1.15"
sled = { version = "1.0.0-alpha.122" }
ecdsa = { version = "0.16.9", features = ["serde", "signing"] }
k256 = "0.13.4"
hex = "0.4.3"
tempfile = { version = "3.12.0" }
mockall = { version = "0.13.0" }
wiremock = "0.6.1"
directories = "6.0.0"
bollard = "0.18"

tracing = "0.1.41"
tracing-subscriber = {version = "0.3", features = ["std", "env-filter"]}
