[workspace]
members = [ 
    "crates/assertion-da/da-client",
    "crates/assertion-da/da-server",
    "crates/assertion-da/da-core",
    "crates/pcl/cli",
    "crates/pcl/phoundry",
    "crates/pcl/common",
    "crates/pcl/core",
    "crates/int-test-utils",
    "crates/assertion-executor",
    "crates/dapp-api-client",
    "crates/sidecar"
]
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2024"
authors = ["Phylax Systems"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/phylaxsystems/credible-sdk"

[workspace.dependencies]
rust-tracing = { git = "https://github.com/phylaxsystems/rust-tracing.git", tag = "0.1.3", default-features = false }

# PCL dependencies
pcl-phoundry = { path = "crates/pcl/phoundry" }
pcl-common = { path = "crates/pcl/common" }
pcl-core = { path = "crates/pcl/core" }

# DA dependencies
assertion-da-client = { path = "crates/assertion-da/da-client" }
assertion-da-server = { path = "crates/assertion-da/da-server" }
assertion-da-core = { path = "crates/assertion-da/da-core" }

# int-test-utils
int-test-utils = { path = "crates/int-test-utils" }

# assertion-executor
assertion-executor = { path = "crates/assertion-executor" }

# dapp-api-client
dapp-api-client = { path = "crates/dapp-api-client" }

anyhow = "1.0.86"
clap = { version = "4.5.11", features = ["derive", "env"] }
futures = "0.3.30"
reqwest = { version = "0.12.5", features = ["json"] }
serde = "1.0.204"
serde_json = "1.0.121"
tokio = { version = "1.39.2", features = ["full"] }
tokio-util = "0.7.15"
zerocopy = "0.7.35"
hyper = { version = "1.4.1", features = ["full"] }
util = "0.1.3"
http-body-util = "0.1.2"
simd-json = "0.13.10"
rand = "0.9.1"
hyper-util = "0.1.6"
bincode = "1.3.3"
tokio-stream = "0.1.15"
sled = { version = "1.0.0-alpha.122" }
k256 = "0.13.4"
hex = "0.4.3"
tempfile = { version = "3.12.0" }
mockall = { version = "0.13.0" }
wiremock = "0.6.1"
directories = "6.0.0"
bollard = "0.18"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }

color-eyre = "0.6"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
colored = "3"
tempdir = "0.3"

rayon = "1.10.0"
parking_lot = "0.12.1"


# alloy dependencies
alloy-provider = { version = "1.0.9", features = [
    "ws",
    "anvil-node",
    "trace-api",
    "debug-api",
] }
alloy-consensus = { version = "1.0.9", features = ["k256"] }
alloy-rpc-types = "1.0.9"
alloy-rpc-types-anvil = "1.0.9"
alloy-pubsub = "1.0.9"
alloy-rpc-client = "1.0.9"
alloy-node-bindings = "1.0.9"
alloy-network = "1.0.9"
alloy-network-primitives = "1.0.9"
alloy-signer = "1.0.9"
alloy-signer-local = "1.0.9"
alloy-transport = "1.0.9"
alloy-transport-ws = "1.0.9"
alloy-eips = "1.0.9"

# alloy core
alloy-primitives = { version = "1.1.0", features = ["getrandom"] }
alloy-sol-types = "1.1.0"

alloy = { version = "1.0.9", features = [
    "full",
    "node-bindings",
    "json-rpc",
    "rpc-client",
    "signer-local",
    "k256",
] }
alloy-dyn-abi = { version = "1.2.1", features = ["std"] }
alloy-json-abi = "1.2.1"

## alloy-evm
alloy-evm = "0.10.0"

# revm dependencies
revm = { version = "24.0.1", features = ["serde"] }
op-revm = { version = "5.0.1", default-features = false }

jsonrpsee = { version = "0.24.7", features = [
    "client",
    "http-client",
    "server",
] }
moka = { version = "0.12.10", features = ["sync"] }
enum-as-inner = "0.6.1"
url = "2.5.4"
criterion = { version = "0.5.1" }
evm-glue = { git = "https://git@github.com/Philogy/evm-glue.git", rev = "6be3e8c89a7d193b591ca0415ec2a48b1540c01e" }


# Maxperf profile for absolute maximum performance
# Only use for builds that are going to get used by end users
[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false
