cargo-features = ["profile-rustflags"]

[workspace]
members = [
    "crates/assertion-da/da-client",
    "crates/assertion-da/da-server",
    "crates/assertion-da/da-core",
    "crates/pcl/cli",
    "crates/pcl/phoundry",
    "crates/pcl/common",
    "crates/pcl/core",
    "crates/int-test-utils",
    "crates/assertion-executor",
    "crates/dapp-api-client",
    "crates/sidecar",
    "crates/sidecar/src/utils/test-macros",
    "crates/state-worker",
    "crates/shadow-driver",
    "crates/state-store",
    "crates/state-checker",
]
exclude = ["fuzz"]
resolver = "2"


[workspace.package]
version = "0.9.3"
edition = "2024"
authors = ["Phylax Systems"]
license = "BSL 1.1"
repository = "https://github.com/phylaxsystems/credible-sdk"

[workspace.dependencies]
rust-tracing = { git = "https://github.com/phylaxsystems/rust-tracing.git", tag = "0.1.3", default-features = false }

# PCL dependencies
pcl-phoundry = { path = "crates/pcl/phoundry" }
pcl-common = { path = "crates/pcl/common" }
pcl-core = { path = "crates/pcl/core" }

# DA dependencies
assertion-da-client = { path = "crates/assertion-da/da-client" }
assertion-da-server = { path = "crates/assertion-da/da-server" }

# int-test-utils
int-test-utils = { path = "crates/int-test-utils" }

# assertion-executor
assertion-executor = { path = "crates/assertion-executor", default-features = false }

anyhow = "1.0.100"
axum = "0.8.7"
clap = { version = "4.5.53", features = ["derive", "env"] }
dashmap = "6.1.0"
futures = "0.3.31"
reqwest = { version = "0.12.26", features = ["json", "rustls-tls"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
hyper = { version = "1.8.1", features = ["full"] }
http-body-util = "0.1.3"
rand = "0.9.1"
hyper-util = "0.1.19"
bincode = "1.3.3"
tokio-stream = "0.1.17"
sled = { version = "1.0.0-alpha.124" }
hex = "0.4.3"
tempfile = { version = "3.23.0" }
wiremock = "0.6.5"
redis = "1.0.1"
testcontainers = "0.25"
testcontainers-modules = { version = "0.13", features = ["redis"] }
directories = "6.0.0"
bollard = "0.19.4"
rustls = { version = "0.23.0", features = ["aws_lc_rs"] }

tracing = { version = "0.1.43", features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.3.22", features = ["std", "env-filter"] }
console-subscriber = { version = "0.5.0" }
tokio-metrics = { version = "0.4.6", features = ["rt"] }

color-eyre = "0.6.5"
thiserror = "2.0.17"
chrono = { version = "0.4.42", features = ["serde"] }
colored = "3"

rayon = "1.11.0"
parking_lot = "0.12.5"

metrics = "0.24.3"

# alloy dependencies
alloy-provider = { version = "1.1.3", features = [
    "ws",
    "anvil-node",
    "trace-api",
    "debug-api",
] }
alloy-consensus = { version = "1.1.3", features = ["k256"] }
alloy-rpc-types = "1.1.3"
alloy-rpc-types-trace = "1.1.3"
alloy-rpc-types-anvil = "1.1.3"
alloy-node-bindings = "1.1.3"
alloy-network = "1.1.3"
alloy-network-primitives = "1.1.3"
alloy-signer = "1.1.3"
alloy-signer-local = "1.1.3"
alloy-transport = "1.1.3"
alloy-transport-ws = "1.1.3"
alloy-eips = "1.1.3"

# alloy core
alloy-primitives = { version = "1.5.0", features = ["getrandom"] }
alloy-sol-types = "1.5.0"

alloy = { version = "1.1.3", features = [
    "full",
    "node-bindings",
    "json-rpc",
    "rpc-client",
    "signer-local",
    "k256",
] }
alloy-dyn-abi = { version = "1.5.0", features = ["std"] }
alloy-json-abi = "1.5.2"

## alloy-evm
alloy-evm = "0.25.2"

# revm dependencies
revm = { version = "33.1.0", features = ["serde"] }
op-revm = { version = "14.1.0", default-features = false }
moka = { version = "0.12.11", features = ["sync"] }
enum-as-inner = "0.6.1"
url = "2.5.7"
criterion = { version = "0.5.1" }
evm-glue = { git = "https://git@github.com/Philogy/evm-glue.git", rev = "6be3e8c89a7d193b591ca0415ec2a48b1540c01e" }


# Maxperf profile for absolute maximum performance
# Only use for builds that are going to get used by end users
[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false

# Maxperf profile for absolute maximum performance
# Only use for builds that are going to get used by end users
[profile.debug-perf]
inherits = "release"
strip = "none"
rustflags = [
    "-C",
    "force-frame-pointers=yes",
    "-C",
    "symbol-mangling-version=v0",
]
debug = "line-tables-only"

[profile.bench]
opt-level = 1
lto = "off"

# Temporary due to a requirement in phoundry
[patch.crates-io]
solar-compiler = { git = "https://github.com/paradigmxyz/solar.git", rev = "1f28069" }
solar-interface = { git = "https://github.com/paradigmxyz/solar.git", rev = "1f28069" }
solar-ast = { git = "https://github.com/paradigmxyz/solar.git", rev = "1f28069" }
solar-sema = { git = "https://github.com/paradigmxyz/solar.git", rev = "1f28069" }
solar-parse = { git = "https://github.com/paradigmxyz/solar.git", rev = "1f28069" }
solar-config = { git = "https://github.com/paradigmxyz/solar.git", rev = "1f28069" }
solar-data-structures = { git = "https://github.com/paradigmxyz/solar.git", rev = "1f28069" }
solar-macros = { git = "https://github.com/paradigmxyz/solar.git", rev = "1f28069" }
