[package]
name = "assertion-executor-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
revm = { workspace = true, features = ["serde"]}
alloy-sol-types = { workspace = true }
alloy-primitives = { workspace = true, features = ["getrandom"] }

[dependencies.assertion-executor]
path = "../crates/assertion-executor"
features = ["test"]


[[bin]]
name = "load_external_slot_fuzz"
path = "fuzz_targets/load_external_slot_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "calls_fuzz"
path = "fuzz_targets/calls_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "logs_fuzz"
path = "fuzz_targets/logs_fuzz.rs"
test = false
doc = false
bench = false
