[package]
name = "assertion-executor"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
rayon = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sled = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tracing = { workspace = true }
zerocopy = { workspace = true, features = ["derive"] }
tempfile = { workspace = true }
parking_lot = { workspace = true }
assertion-da-client = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true, features = ["derive"] }


# ETH deps
alloy = { workspace = true }
alloy-provider = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-consensus = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-rpc-types-anvil = { workspace = true }
alloy-pubsub = { workspace = true }
alloy-rpc-client = { workspace = true }
alloy-node-bindings = { workspace = true }
alloy-network = { workspace = true }
alloy-network-primitives = { workspace = true }
alloy-primitives = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
alloy-transport = { workspace = true }
alloy-transport-ws = { workspace = true }

alloy-evm = { workspace = true }

revm = { workspace = true }
op-revm = { workspace = true }

# Test deps
serde_json = { workspace = true }
rand = { workspace = true, optional = true }
tokio-util = { workspace = true }
moka = { workspace = true }
enum-as-inner = { workspace = true }
url = { workspace = true }
evm-glue = { workspace = true }


[features]
default = ["full-test"]
optimism = []
linea = []
phoundry = ["revm/optional_eip3607"]
test = ["serde_json", "rand"]
serde_json = []
full-test = []

[dev-dependencies]
rand = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
alloy-eips = { workspace = true }
assertion-da-server = { workspace = true }
criterion = { workspace = true }
bollard = { workspace = true }
int-test-utils = { workspace = true }
assertion-executor = { path = ".", default-features = false, features = ["test"] }
futures = { workspace = true }
anyhow = { workspace = true }
evm-glue = { workspace = true }

[[bench]]
name = "worst-case-op"
required-features = ["test"]
harness = false