[package]
name = "mdbx"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
alloy = { workspace = true }
thiserror = { workspace = true }
bytes = "1.11.1"
modular-bitfield = "0.11.2"
reth-db = { workspace = true }
reth-db-api = { workspace = true }
reth-codecs = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-libmdbx = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }

[package.metadata.cargo-shear]
ignored = ["modular-bitfield"]

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = ["writer", "reader"]
reader = []
writer = []
