[package]
name = "rpc-proxy"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "JSON-RPC proxy that enforces sidecar-derived heuristics"
publish = false

[lib]
name = "rpc_proxy"
path = "src/lib.rs"

[[bin]]
name = "rpc-proxy"
path = "src/bin/rpc-proxy.rs"

[dependencies]
ajj = { version = "0.4.1", features = ["axum"] }
anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true, features = ["derive"] }
dashmap = { workspace = true }
moka = { workspace = true, features = ["sync"] }
metrics = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
hyper = { workspace = true }
alloy-consensus = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rlp = "0.3.12"
parking_lot = { workspace = true }
