[package]
name = "rpc-proxy"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "JSON-RPC proxy that enforces sidecar-derived heuristics"
publish = false

[lib]
name = "rpc_proxy"
path = "src/lib.rs"

[[bin]]
name = "rpc-proxy"
path = "src/bin/rpc-proxy.rs"

[[bin]]
name = "profile_hot_path"
path = "benches/profile_hot_path.rs"

[dependencies]
ajj = { version = "0.4.1", features = ["axum"] }
anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true, features = ["derive"] }
dashmap = { workspace = true }
moka = { workspace = true, features = ["sync"] }
metrics = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
hyper = { workspace = true }
alloy-consensus = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rlp = "0.3.12"
parking_lot = { workspace = true }
async-trait = "0.1"
futures = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
tokio-stream = { workspace = true }
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
prost-types = "0.13"
tower = { version = "0.5", features = ["limit", "timeout"] }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
fastrand = "2.3"

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"

[dev-dependencies]
wiremock = "0.6"
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "hot_path"
harness = false

[[bench]]
name = "cache_operations"
harness = false
