[package]
name = "shadow-driver"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
alloy = { workspace = true, features = ["consensus"] }
alloy-provider = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
revm = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rust-tracing = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
hex = { workspace = true }
rustls = { version = "0.23", features = ["aws_lc_rs"] }
