[package]
name = "shadow-driver"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
alloy = { workspace = true, features = ["consensus"] }
alloy-provider = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rust-tracing = { workspace = true }
rustls = { workspace = true }
sidecar = { path = "../sidecar" }
tonic = { version = "0.14.2", features = ["transport"] }
tokio-stream = { workspace = true }
