[package]
name = "sidecar"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
alloy = { workspace = true }
clap = { workspace = true }
dashmap = { workspace = true }
revm = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
assertion-executor = { workspace = true, default-features = false }
rust-tracing = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
axum = { workspace = true }
tonic = { version = "0.14.2", features = ["transport"] }
prost = "0.14"
tonic-prost = "0.14.2"
tokio-stream = { version = "0.1", features = ["net"] }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
ctor = { version = "0.5.0", optional = true }
tracing-subscriber.workspace = true
sled = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
rustls = { version = "0.23", features = ["aws_lc_rs"] }
assertion-da-client = { workspace = true }
alloy-provider = { workspace = true }
metrics = { workspace = true }
futures = { workspace = true }
redis = { workspace = true }
hex = { workspace = true }
moka = { version = "0.12.10", features = ["sync"], optional = true }
alloy-rpc-types-trace = { workspace = true, optional = true }
criterion = "0.6"
console-subscriber = { workspace = true, optional = true }
tokio-metrics = { workspace = true, optional = true }
sidecar-test-macros = { path = "src/utils/test-macros", optional = true }
int-test-utils = { path = "../int-test-utils", optional = true }

[build-dependencies]
tonic-prost-build = "0.14.2"
prost-build = "0.14"
protoc-bin-vendored = "3"

[features]
default = ["linea"]
linea = ["assertion-executor/linea"]
optimism = ["assertion-executor/optimism"]
test = [
    "assertion-executor/test",
    "ctor",
    "sidecar-test-macros",
    "int-test-utils",
]
bench-utils = [
    "assertion-executor/test",
    "ctor",
    "sidecar-test-macros",
    "int-test-utils",
]
tokio-console = [
    "console-subscriber",
    "tokio-metrics",
]
cache_validation = ["moka"]
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }

[dev-dependencies]
ctor = "0.5.0"
sidecar-test-macros = { path = "src/utils/test-macros" }
assertion-executor = { workspace = true, features = ["test"] }
tracing-test = "0.2.5"
redis-test = { workspace = true }
int-test-utils = { path = "../int-test-utils" }
tempfile = "3.20.0"

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
strip = true

[profile.bench]
debug = true
lto = "fat"
opt-level = 3
codegen-units = 1

[[bench]]
name = "worst_case_compute"
path = "benches/worst_case_compute.rs"
harness = false
required-features = ["bench-utils"]
