[package]
name = "sidecar"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
alloy = { workspace = true }
clap = { workspace = true }
dashmap = { workspace = true }
revm = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
assertion-executor = { workspace = true, default-features = false }
rust-tracing = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
axum = { workspace = true }
tonic = { version = "0.14.2", features = ["transport"] }
prost = "0.14.1"
tonic-prost = "0.14.2"
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
ctor = { version = "0.6.3", optional = true }
tracing-subscriber.workspace = true
sled = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json", "rustls-tls"] }
rustls = { workspace = true }
assertion-da-client = { workspace = true }
dapp-api-client = { path = "../dapp-api-client" }
alloy-provider = { workspace = true }
metrics = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
moka = { version = "0.12.11", features = ["sync"], optional = true }
alloy-rpc-types-trace = { workspace = true, optional = true }
url = { workspace = true }
console-subscriber = { workspace = true, optional = true }
tokio-metrics = { workspace = true, optional = true }
sidecar-test-macros = { path = "src/utils/test-macros", optional = true }
int-test-utils = { path = "../int-test-utils", optional = true }
state-store = { path = "../state-store", features = ["reader"] }
hashlink = "0.11.0"
flume = "0.12.0"
arrayvec = "0.7.6"
parking_lot.workspace = true
async-trait.workspace = true
bincode.workspace = true

# reth
reth-db = { workspace = true }
reth-db-api = { workspace = true }
reth-libmdbx = { workspace = true }

[build-dependencies]
tonic-prost-build = "0.14.2"
protoc-bin-vendored = "3"

[features]
default = []
optimism = ["assertion-executor/optimism"]
test = [
    "assertion-executor/test",
    "ctor",
    "sidecar-test-macros",
    "int-test-utils",
]
bench-utils = [
    "assertion-executor/test",
    "ctor",
    "sidecar-test-macros",
    "int-test-utils",
]
tokio-console = [
    "console-subscriber",
    "tokio-metrics",
]
cache_validation = ["moka", "alloy-rpc-types-trace"]

[package.metadata.cargo-shear]
ignored = ["prost", "tonic-prost"]
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }

[dev-dependencies]
ctor = "0.6.3"
sidecar-test-macros = { path = "src/utils/test-macros" }
assertion-executor = { workspace = true, features = ["test"] }
tracing-test = "0.2.5"
int-test-utils = { path = "../int-test-utils" }
tempfile = "3.23.0"
criterion = { workspace = true }
httpmock = "0.8"

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
strip = true

[profile.bench]
debug = true
lto = "fat"
opt-level = 3
codegen-units = 1

[[bench]]
name = "worst_case_compute"
path = "benches/worst_case_compute.rs"
harness = false
required-features = ["bench-utils"]

[[bench]]
name = "transactions_results_add_transaction_result"
path = "benches/transactions_results_add_transaction_result.rs"
harness = false

[[bench]]
name = "event_sequencing_latency"
path = "benches/event_sequencing_latency.rs"
harness = false

[[bench]]
name = "avg_block"
path = "benches/avg_block.rs"
harness = false
required-features = ["bench-utils"]

[[bench]]
name = "worst_case_compute_with_observer"
path = "benches/worst_case_compute_with_observer.rs"
harness = false
required-features = ["bench-utils"]
