[package]
name = "state-store"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
redis = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
alloy = { workspace = true }
thiserror = { workspace = true }
uuid = { version = "1.15", features = ["v4"] }
chrono = { workspace = true }

[dev-dependencies]
testcontainers = "0.26.0"
testcontainers-modules = { version = "0.14.0", features = ["redis"] }

[features]
default = ["writer", "reader"]
reader = []
writer = []
