[package]
name = "state-store"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
redis = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
alloy = { workspace = true }
thiserror = { workspace = true }
uuid = { version = "1.15", features = ["v4"] }
chrono = { workspace = true }
bytes = "1.11.0"
modular-bitfield = "0.11.2"
reth-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-db-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-codecs = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-libmdbx = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
rayon = { workspace = true }
tracing = { workspace = true }

[package.metadata.cargo-shear]
ignored = ["modular-bitfield"]

[dev-dependencies]
testcontainers.workspace = true
testcontainers-modules = { workspace = true, features = ["redis"] }
tempfile = { workspace = true }

[features]
default = ["writer", "reader"]
reader = []
writer = []
