[package]
name = "state-worker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1.89"
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
redis = { workspace = true }
alloy = { workspace = true }
alloy-provider = { workspace = true }
alloy-rpc-types-trace = { workspace = true }
futures = { workspace = true }
revm = { workspace = true }
hex = { workspace = true }
rust-tracing = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
state-store = { path = "../state-store", features = ["writer"] }

[dev-dependencies]
int-test-utils = { path = "../int-test-utils" }
serde_json = { workspace = true }
tracing-test = "0.2.5"
testcontainers = "0.26.0"
testcontainers-modules = { version = "0.14.0", features = ["redis"] }

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
strip = true
