[package]
name = "state-worker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1.89"
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
redis = { workspace = true }
alloy = { workspace = true }
alloy-provider = { workspace = true }
alloy-rpc-types-trace = { workspace = true }
futures = { workspace = true }
revm = { workspace = true }
hex = { workspace = true }
rust-tracing = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
state-store = { path = "../state-store", features = ["writer"] }

[dev-dependencies]
int-test-utils = { path = "../int-test-utils" }
serde_json = { workspace = true }
tracing-test = "0.2.5"
testcontainers.workspace = true
testcontainers-modules = { workspace = true, features = ["redis"] }
uuid = "0.8.2"
chrono = "0.4.42"
